--- a/defs601.sty
+++ b/defs601.sty
@@ -130,7 +130,7 @@
 \usepackage{amssymb,amsfonts,amsmath} % Typical maths resource packages
 \usepackage{mathdots}
 \usepackage{graphicx}                 % Packages to allow inclusion of graphics
-\usepackage[usenames,dvipsnames]{color}                    % For creating coloured text and background
+%\usepackage[usenames,dvipsnames]{color}                    % For creating coloured text and background
 \usepackage{url} 
 \usepackage{hyperref}                 % For creating hyperlinks in cross references
 \usepackage{cleveref}                 % \Cref{label}: Theorem 7 and \cref{label}: theorem 7
