--- a/hw4Ans.tex
+++ b/hw4Ans.tex
@@ -8,10 +8,17 @@
 \addtocounter{section}{1}
 
 \begin{enumerate}
+
 \item Prove that if $S$ is r.e. hard or co-r.e. hard, then $S$ is not recursive. (From now on, the main way we will
 prove that a problem is not recursive, i.e., not computable, is to show that it is r.e. hard or co-r.e. hard.)
 
-{\bf Answer by:} \quad {\bf with edits by:}
+\begin{itemize}
+
+\item \textbf{1)} Let a set $S$ be r.e. hard, and assume for contradiction that $S$ is recursive. Then for all sets $T \in$ r.e., $T \leq S$. But, we know that the diagonal set $K \in$ r.e., and therefore, $K \leq S$. We have already shown that $K$ is not recursive, and since $S$ is "at least as hard as" $K$, $S$ cannot be either. Similarly, if a set $S$ is co-r.e. hard, it cannot be recursive, as we find that $\bar{K} \leq S$, and $\bar{K}$ is therefore recursive, a contradiction on the assumption that $S$ is. So, if $S$ is r.e. hard or co-r.e. hard, it cannot be recursive.
+
+\end{itemize}
+
+{\bf Answer by: Dan Saunders} \quad {\bf with edits by:}
 
 \item Prove Theorem 4.2 from the posted notes for Lecture 4.
 \[
@@ -28,7 +35,50 @@ prove that a problem is not recursive, i.e., not computable, is to show that it 
 \]
 
 \begin{itemize}
-\item \textbf{2d} There are two algorithms that we can use to determine if two DFA are in EqualDFA. 
+
+\item \textbf{2a)} Let $N$ be an arbitrary NFA. In order to decide whether $\sel(N) = \emptyset$, we build a machine that does the following:
+
+\begin{enumerate}
+
+\item We begin by checking whether the start node of $N$ is final. If so, we reject. Otherwise, we put a mark on it and add each node to which we can travel to in one step to a list. 
+
+\item For each node in the list, if it is a final state, reject. Otherwise, we mark the node and add each unmarked node to which we can travel to in one step to the list, and then remove the current node from the list.
+
+\item We repeat (b) until the list is empty, and accept if and only if we have not seen any nodes that are final states of $N$. 
+
+\end{enumerate}
+
+This search operates in time linear in the number of nodes in the NFA, and so we have that EmptyNFA $\in P$.
+
+\item \textbf{2b)} Let $D$ be an arbitrary DFA. In order to determine whether ${\sel(D) = \Sigma^\star}$, we build a machine that performs the following procedure:
+
+\begin{enumerate} 
+
+\item Begin by marking the start state of $D$, and add each node to which we can travel to in one step to a list.
+
+\item For each node in the list, if it is a non-final state, reject. Otherwise, mark the node and add each unmarked node to which we may travel to in one step to the list, and then remove the current node from the list.  
+
+\item Repeat this process until the list is empty, and accept if and only if we have not seen any nodes that are not in the set of final states, $F$.
+
+\end{enumerate}
+
+Since this search operates in linear time with respect to the number of nodes in the DFA, we have shown that $\Sigma^\star\mbox{{\rm DFA}}$ $\in$ $P$.
+
+\item \textbf{2c)} Let $N$ be an arbitrary NFA, and let $w$ be an arbitrary input to $N$. Then, the following algorithm will check whether $w \in \sel(N)$:
+
+\begin{enumerate}
+
+\item We begin by creating a list which will store the possible positions of the NFA $N$ at each step in its computation. We add the start state to the list, and any states that can be reached via an $\epsilon$-move.
+
+\item For each character in the string $w$, we perform a step of the computation as follows: We create a new, empty list, and for each state in the old list, we place the set of states (to be moved to in one step) specified by the transition function of $N$ in accordance with both the current state and the character currently being read, including possible $\epsilon$-moves. 
+
+\item At the end of this computation, we have a list of states in which the machine could be after performing its computation. We accept if any of the states are final states, and reject otherwise.
+
+\end{enumerate}
+
+This algorithm is clearly linear in the length of the input $w$, and so MemberNFA $\in P$.
+
+\item \textbf{2d)} There are two algorithms that we can use to determine if two DFA are in EqualDFA. 
 
 \textbf{Option 1} is to convert both DFAs to their minimal representation, and then compare the resulting minimal represenations isomorphically to determine if they are equivalent. 
 
@@ -61,7 +111,7 @@ D_{1\cap 2} = (Q_1 \times Q_2, \Sigma, \delta_{1\cap 2}, (s_1,s_2), F_{1\cap 2})
 
 Where $F_{1\cap 2}$ is the set of end states $(f_1,f_2)$ where $f_1 \in F_1$ and $f_2 \in F_2$ and $\delta_{1\cap2}$ applies the partial transition functions from each original DFA to generate a new combined state. Once $D_1 \cap \overline{D_2}$ and $\overline{D_1} \cap D_2$ are generated, you can use EmptyNFA above to determine if $L(D_1 \cap \overline{D_2}) = \emptyset$ and $L(\overline{D_1} \cap D_2) = \emptyset$. If both are true, then $(D_1,D_2) \in EqualDFA$.
 
-\item \textbf{2e} The following algorithm will determine if $L(G) = \emptyset$ for a given CFG $G = (V,\Sigma, R, S)$:
+\item \textbf{2e)} The following algorithm will determine if $L(G) = \emptyset$ for a given CFG $G = (V,\Sigma, R, S)$:
 
 \[
 \begin{array}{l}
@@ -74,7 +124,7 @@ Where $F_{1\cap 2}$ is the set of end states $(f_1,f_2)$ where $f_1 \in F_1$ and
 \end{array}
 \]
 
-\item \textbf{2f} The following algorithm will determine if $(G,w) \in MemberCFL$, that is,
+\item \textbf{2f)} The following algorithm will determine if $(G,w) \in MemberCFL$, that is,
 
 \begin{equation}
 \{\langle G,w\rangle\ | G \in CFG, w \in L(G)\}
