Little typo fixed
\Sigma+1 -> \Sigma_1

--- a/hw4Ans.tex
+++ b/hw4Ans.tex
@@ -103,7 +103,7 @@ L(\overline{D_1} \cap D_2) & = & \emptyset \\
 \end{array} 
 \]
 
-The intersection of two DFAs $D_1 = (Q_1, \Sigma_1, \delta_1, s_1, F_1)$ and $D_2 = (Q_1, \Sigma_2, \delta_2, s_2, F_2)$ is (assuming $\Sigma+1 = \Sigma_2: $
+The intersection of two DFAs $D_1 = (Q_1, \Sigma_1, \delta_1, s_1, F_1)$ and $D_2 = (Q_1, \Sigma_2, \delta_2, s_2, F_2)$ is (assuming $\Sigma_1 = \Sigma_2: $
 
 \begin{equation*}
 D_{1\cap 2} = (Q_1 \times Q_2, \Sigma, \delta_{1\cap 2}, (s_1,s_2), F_{1\cap 2})
