--- a/HW2ans.tex
+++ b/HW2ans.tex
@@ -8,34 +8,16 @@
 {Due in class Tue, Jan. 26, 2016}}
 \addtocounter{section}{2}
 
-In Lecture 2 we defined partial recursive functions, total recursive functions, recursive sets,
-r.e. sets and co-r.e. sets. We showed that all Turing machines can be listed out as $M_0, M_1, 
-\ldots, M_n, \ldots$, where the subscript, $n$, is a natural number, which may also be thought of as a binary
-string, $w = \zeta^{-1}(n)$, which is a binary encoding of the the program that $M_n$ runs, i.e.,
-$n$ is the program. 
-
-As Turing proved, there is a universal TM, $U$, with the property that for all $i,j\in\N$, $U(i,j) =
-M_i(j)$, i.e., the universal machine on input $(i,j)$ exactly simulates $M_i$ on input $j$.
-
-We also defined $W_i = \sel(M_i) = \bigset{w}{M_i(w) = 1}$, i.e., the set accepted by TM $M_i$ is
-the $i$th r.e. set.  The set of all r.e. sets is thus $\RE = \set{W_0, W_1, \ldots}$.
-
-We defined the diagonal set, $K = \bigset{i}{i \in W_i}$. We proved that $K$ is r.e., but that it's
-complement, $\ov{K}  = \bigset{i}{i \not\in W_i}$ is not r.e.
-
-Please read the notes for lectures 1 and 2 posted on the syllabus page.
-
-Even though the proofs so far are reasonably simple, the concepts are deep and take a while to
-absorb.  The goal of this homework is to help you do that.
-
 \begin{enumerate}
-\item Let $A_{\text{TM}} = \bigset{(i,j)}{M_i(j) = 1}$.  
+\item  Let $A_{\text{TM}} = \bigset{(i,j)}{M_i(j) = 1}$.  
 
 \begin{enumerate}
    \item Show directly from the definition of r.e., that $A_{\text{TM}}$ is r.e., i.e., that 
          $p_{A_{\text{TM}}}$ is a partial recursive function.  
-         
-         \textbf{Proof}: Let $A_{\text{TM}} = \bigset{(i,j)}{M_i(j) = 1}$.
+       
+{\bf Answer by: Sophie Koffler} \quad {\bf with edits by: Neil}\\
+  
+         \textbf{Proof}: 
          \\To show that $A_{\text{TM}}$ is r.e., we need to show that there exists a TM, $M_{A}$, that computes  the partial(characteristic) recursive function, $p_{A_{\text{TM}}}$, for $A_{\text{TM}}$. 
          \\We need to show that $\forall w \in \Sigma_{0}^{*} (p_{A_{\text{TM}}}(w) = M_{A}(w))$ where $w$ is the binary encoding of a pair of natural numbers $i$ and $j$, which can be decoded using the left and right pairing functions respectively, as defined in class.
          \\Let $M_{A}$ be the TM that computes $p_{A_{\text{TM}}}(w) = p_{A_{\text{TM}}}(L(w),R(w)) = p_{A_{\text{TM}}}(i,j)$.
@@ -43,10 +25,10 @@ absorb.  The goal of this homework is to help you do that.
          \[ p_{A_{\text{TM}}}(i,j) = 
          \left \{
          \begin{tabular}{cc}
-         1 & if (i,j) \in A_{\text{TM}}  \\
-         \nearrow & otherwise \\
+         1 & if $(i,j) \in A_{\text{TM}}$  \\
+         $\nearrow$ & otherwise \\
          \end{tabular}
-         \right 
+         \right.
          \]
 	    \end{center}
           More specifically, 
@@ -54,35 +36,39 @@ absorb.  The goal of this homework is to help you do that.
           \[ p_{A_{\text{TM}}}(i,j) = 
           \left \{
           \begin{tabular}{cc}
-          1 & if M_{i}(j)=1  \\
-          \nearrow & otherwise \\
+          1 & if $M_{i}(j)=1$  \\
+          $\nearrow$  & otherwise \\
           \end{tabular}
-          \right 
+          \right.
           \]
         \end{center}
         
          On input X, $M_{A}$ operates as follows:
          \begin{description}
          	\item[1] Verify X is an encoding of a pair of natural numbers, and decode the numbers, i and j using the left and right pairing functions respectively. 
-         	\\If X is not valid input reject.
+         	\\If X is not valid input reject.  [{\color{blue} Note from Neil: While correct, this is not
+                necessary because we assume throughout that every input, $X$, is a natural number
+                and thus, since $X = P(L(X),R(X))$, also a pair of natural numbers.}]
          	\item[2] Run TM $M_{i}$ on input $j$:
 			         	if ($M_{i}(j)$==1) return 1
 			         	else diverge
          \end{description}
-        Since we have constructed a TM $M_{A}$ that computes $p_{A_{\text{TM}}}$, we have shown that $A_{\text{TM}$ is r.e. $\Box$ 
+        Since we have constructed a TM $M_{A}$ that computes $p_{A_{\text{TM}}}$, we have shown that $A_{\text{TM}}$ is r.e. $\Box$ 
          
    \item Show from the fact that $\ov{K}$ is not r.e., that $A_{\text{TM}}$ is not recursive.  
    
+{\bf Answer by: Sophie Koffler} \quad {\bf with edits by: }\\
+
      \textbf{Proof}: Assume, for the sake of contradiction, that $A_{\text{TM}}$ is recursive, therefore we have TM, $M_{A}$, that
      computes $\chi_{A_{\text{TM}}}$, the characteristic function of $A_{\text{TM}}$, which is defined as follows: 
       \begin{center}	 
        	\[ \chi_{A_{\text{TM}}}(i,j) = 
        	\left \{
        	\begin{tabular}{cc}
-       	1 & if (i,j) \in A_{\text{TM}}  \\
+       	1 & if (i,j) $\in A_{\text{TM}}$  \\
        	0 & otherwise \\
        	\end{tabular}
-       	\right 
+       	\right.
        	\]
        \end{center}
        
@@ -105,10 +91,10 @@ absorb.  The goal of this homework is to help you do that.
       	\[ \chi_{\ov{K}}(i,i) = 
       	\left \{
       	\begin{tabular}{cc}
-      	1 & if (i,i) \in A_{\text{TM}} \\
+      	1 & if $(i,i) \in A_{\text{TM}}$ \\
       	0 & otherwise \\
       	\end{tabular}
-      	\right 
+      	\right. 
       	\]
       \end{center}
       
@@ -117,10 +103,10 @@ absorb.  The goal of this homework is to help you do that.
       	\[ \chi_{\ov{K}}(i,i) = 
       	\left \{
       	\begin{tabular}{cc}
-      	1 & M_{i}(i)=1 \\
+      	1 & $M_{i}(i)=1$ \\
       	0 & otherwise \\
       	\end{tabular}
-      	\right 
+      	\right. 
       	\]
       \end{center}
        
