--- a/hw7Ans.tex
+++ b/hw7Ans.tex
@@ -15,6 +15,8 @@ proof reading would be appreciated.)
 
 Show that the following three problems are all NL complete:
 
+\textbf{Answers by: Dan Saunders}
+
 \begin{enumerate}
 \item  EMPTY-DFA $ = \bigset{D}{D \mbox{ a deterministic finite automaton and } \sel(D) =
   \emptyset}$ 
